# hamstring-zeek

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  config.yaml  docker-compose.yml  vcpkg.json
.github/workflows/: build_publish_docker.yml  build_test_linux.yml  build_test_macos.yml  build_test_windows.yml  formatting.yml
requirements/: requirements.zeek.txt
src/: CommandExecutor.hpp  Dockerfile  ZeekAnalysisHandler.cpp  ZeekAnalysisHandler.hpp  ZeekConfigHandler.cpp  ZeekConfigHandler.hpp  main.cpp  string_utils.hpp
src/base/: log_config.py
src/zeek/: zeek_analysis_handler.py  zeek_config_handler.py  zeek_handler.py
tests/: test_zeek_analysis_handler.cpp  test_zeek_analysis_handler.py  test_zeek_config_handler.cpp  test_zeek_config_handler.py  test_zeek_handler.py
